--- a/src/Header.css
+++ b/src/Header.css
@@ -10,9 +10,8 @@
 .header__logo{
 width:100px;
 object-fit: contain;
-margin-left: 20px;
-margin-right: 20px;
-margin-top: 18px;
+margin: 18px 20px 0;
+
 }
 .header__search{
     display: flex;
@@ -46,8 +45,7 @@ margin-top: 18px;
 .header__option{
     display: flex;
     flex-direction: column;
-    margin-left: 10px;
-    margin-right:10px;
+    margin: 0 10px;
 }
 
 .header__optionLineOne{
