--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,5 +1,5 @@
 .header{
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     display:flex;
     align-items: center;
     position: sticky;
@@ -27,7 +27,7 @@ margin: 18px 20px 0;
 .header__searchIcon{
     padding: 5px;
     height: 22px;
-    background-color: yellow;
+    background-color: rgb(243, 243, 229);
 }
 
 
@@ -38,7 +38,7 @@ margin: 18px 20px 0;
 }
 
 .header__link{
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
