--- a/src/JobSeekerSignUp/PageImage/signup.css
+++ b/src/JobSeekerSignUp/PageImage/signup.css
@@ -1,3 +1,20 @@
+html{
+
+background-color: white !important;
+
+
+}
+
+h3{
+ 
+  padding: 0px 0px 18px;
+}
+
+body{
+  height: 85vh !important;
+  
+}
+
 span.signupImageHolderCls {
     display: block;
     width: 330px;
@@ -12,6 +29,7 @@ img.signupImageCls {
 }
 .signupLeftHolder {
     min-height: 100vh;
+    height: 100% !important;
     padding: 0px 12%;
 }
 .signupLeftJoListingCls {
@@ -21,6 +39,8 @@ img.signupImageCls {
     margin: auto;
     box-shadow: 0px 4px 20px 0px rgb(0 0 0 / 33%);
     margin-top: 27px;
+    background: white !important;
+    margin-top: 200px !important;
 }
 
 .row{
@@ -33,7 +53,7 @@ img.signupImageCls {
     width: 90% !important;
     box-sizing: border-box;
     position: relative;
-    margin-top: 50px;
+   
    height: 60%;
   
 }
@@ -50,7 +70,8 @@ img.signupImageCls {
    
     /* width: 90%; */
     height: 100%;
-   margin-top: 80px;
+  
+    
    
     justify-content: center;
     align-items: center;
@@ -117,3 +138,181 @@ img.signupImageCls {
 
 
 
+.textWhite {
+  color: #020202 !important;
+  font-weight: 150 !important;
+}
+
+.bgColor, .btnDesignCls:hover {
+  background-color: #ffffff !important;
+}
+
+
+
+*{
+
+  margin :0;
+}
+
+/* Theme Colors */
+:root{
+  --primaryColor: #ff0000;
+  --secondaryColor: #00b7ff;
+}
+.bgColor, .btnDesignCls:hover{
+  background-color: var(--primaryColor);
+}
+.textColor, .nav>li>a:focus, .nav>li>a:hover, .navbar-inverse .navbar-nav>li>a:hover{
+  color: var(--primaryColor);
+}
+.secBgColor{
+  background-color: var(--secondaryColor);
+}
+.secTextColor{
+  color: var(--secondaryColor);
+}
+.secBorderColor{
+  border-color: var(--secondaryColor) !important;
+}
+.priBorderColor{
+  border-color: var(--primaryColor) !important;
+}
+.bgColorWhite{
+  background-color: #ffffff;
+}
+.headerFont{
+  font-family: 'Pacifico', cursive;
+}
+.paraFont{
+  font-family: 'Questrial', sans-serif;
+  font-size: 16px;
+  line-height: 1.7em;
+  padding: 0px 31px 0px 0px;
+}
+.bannerHeaderText {
+  padding: 0px 0px 18px;
+}
+.paddingNoneCls{
+  padding: 0px;
+}
+.textWhite{
+  color: black;
+}
+/* End */
+
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+.App-link {
+  color: #61dafb;
+}
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
+/* New Css */
+body{
+  background-color: white !important;
+  margin-top: 0;
+}
+.bannerContainerCls {
+  display: block;
+  width: 100%;
+  height: 500px;
+}
+.bannerImageCls {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.rowContainerCls{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 8%;
+}
+.navbar-nav>li {
+  list-style: none;
+  padding: 21px;
+  background-color: snow;
+  width: calc(100% / 5);
+}
+ul.navbar-nav {
+  float: none;
+}
+.navbar-nav>li>a {
+  color: black;
+}
+.secondMenuCls>a {
+  color: black;
+  width: 20%;
+  display: inline-block;
+  font-size: 15px;
+}
+.secondMenuCls {
+  float: none;
+  width: 100%;
+  padding: 25px 0px;
+}
+button.navbar-toggler.collapsed {
+  display: none;
+}
+.bgColorBanner{
+  background-color: white;
+}
+.partnerContainerCls {
+  padding: 80px 0px;
+}
+.partnerLogoCls {
+  width: 100%;
+  height: auto;
+  padding: 10px;
+}
+.partnerLogoContainer li {
+  list-style: none;
+  margin: 0px auto 26px;
+  box-shadow: 0px 0px 20px 0px rgb(0 0 0 / 20%);
+  width: 100%;
+  border-radius: 6px;
+}
+.paddingSectionCls {
+  padding: 50px 0px;
+}
+.bannerSectionCls {
+  min-height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+ul.partnerLogoContainer {
+  padding: 0px;
+}
