--- a/src/PsychometricTest/components/Login/stylesheet.css
+++ b/src/PsychometricTest/components/Login/stylesheet.css
@@ -15,7 +15,7 @@ white: #FBFEF9
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #9bc6cf;
+    background-color: #ffffff;
   }
   
   .form-wrapper {
@@ -25,7 +25,7 @@ white: #FBFEF9
     padding: 20px 40px;
     border-radius: 10px;
     box-shadow: 0px 10px 50px #555;
-    background-color:#FBFEF9;
+    background-color:white;
   }
   
   form {
