--- a/src/HomePage/home.css
+++ b/src/HomePage/home.css
@@ -16,15 +16,16 @@ margin-top: 18px;
 }
 .header__search{
     display: flex;
-    padding-left: 200px;
+    padding-left: 60px;
     width: 80%;
 }
 .header__searchInput{
-    height: auto;
+    height: 40px !important;
     padding:10px;
     border:none;
     width:90%;
     border-radius: 5px;
+    background-color: #f9f8f8;
 }
 
 .header__searchIcon{
@@ -58,12 +59,12 @@ margin-top: 18px;
 }
 
 .header__optionLineOne{
-    font-size: 20px;
+    font-size: 20px !important;
 
 }
 
 .header__optionLineTwo{
-   font-size: 15px;
+   font-size: 15px !important;
    font-weight: 800; 
 }
 section.featuredSectionCls {
@@ -83,4 +84,172 @@ a.readMoreBtnCls {
 }
 .featuredLogos li img {
     padding: 30px;
+}
+
+
+*{
+
+  margin :0;
+}
+
+/* Theme Colors */
+:root{
+  --primaryColor: #ff0000;
+  --secondaryColor: #00b7ff;
+}
+.bgColor, .btnDesignCls:hover{
+  background-color: var(--primaryColor);
+}
+.textColor, .nav>li>a:focus, .nav>li>a:hover, .navbar-inverse .navbar-nav>li>a:hover{
+  color: var(--primaryColor);
+}
+.secBgColor{
+  background-color: var(--secondaryColor);
+}
+.secTextColor{
+  color: var(--secondaryColor);
+}
+.secBorderColor{
+  border-color: var(--secondaryColor) !important;
+}
+.priBorderColor{
+  border-color: var(--primaryColor) !important;
+}
+.bgColorWhite{
+  background-color: #ffffff;
+}
+.headerFont{
+  font-family: 'Pacifico', cursive;
+}
+.paraFont{
+  font-family: 'Questrial', sans-serif;
+  font-size: 16px;
+  line-height: 1.7em;
+  padding: 0px 31px 0px 0px;
+}
+.bannerHeaderText {
+  padding: 0px 0px 18px;
+}
+.paddingNoneCls{
+  padding: 0px;
+}
+.textWhite{
+  color: #ffffff;
+}
+/* End */
+
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+.App-link {
+  color: #61dafb;
+}
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
+/* New Css */
+body{
+  background-color: white;
+}
+.bannerContainerCls {
+  display: block;
+  width: 100%;
+  height: 500px;
+}
+.bannerImageCls {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.rowContainerCls{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 8%;
+}
+.navbar-nav>li {
+  list-style: none;
+  padding: 21px;
+  background-color: snow;
+  width: calc(100% / 5);
+}
+ul.navbar-nav {
+  float: none;
+}
+.navbar-nav>li>a {
+  color: black;
+}
+.secondMenuCls>a {
+  color: black;
+  width: 20%;
+  display: inline-block;
+  font-size: 15px;
+}
+.secondMenuCls {
+  float: none;
+  width: 100%;
+  padding: 25px 0px;
+}
+button.navbar-toggler.collapsed {
+  display: none;
+}
+.bgColorBanner{
+  background-color: white;
+}
+.partnerContainerCls {
+  padding: 80px 0px;
+}
+.partnerLogoCls {
+  width: 100%;
+  height: auto;
+  padding: 10px;
+}
+.partnerLogoContainer li {
+  list-style: none;
+  margin: 0px auto 26px;
+  box-shadow: 0px 0px 20px 0px rgb(0 0 0 / 20%);
+  width: 100%;
+  border-radius: 6px;
+}
+.paddingSectionCls {
+  padding: 50px 0px;
+}
+.bannerSectionCls {
+  min-height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+ul.partnerLogoContainer {
+  padding: 0px;
 }
